--- a/app/scss/base/_grid.scss
+++ b/app/scss/base/_grid.scss
@@ -2,7 +2,7 @@
 	max-width: $main-width;
 	margin: 0 auto;
 	display: flex;
-	flex-wrap: wrap;
+	//flex-wrap: wrap;
 
 	@media #{$medium-up} {
 		padding: 0 1rem;
@@ -39,7 +39,8 @@
 
 @for $i from 1 through $row-count {
 	[am-Col~='#{$i}'] {
-		flex: 0 (100%/$row-count)*$i;
+		flex-grow: 0;
+		flex-basis: (100%/$row-count)*$i;
 	}
 }
 
@@ -49,7 +50,8 @@
 	@for $i from 1 through $row-count {
 
 		[am-Col~='m#{$i}'] {
-			flex: 0 (100%/$row-count)*$i;
+			flex-grow: 0;
+			flex-basis: (100%/$row-count)*$i;
 		}
 
 	}
@@ -61,7 +63,8 @@
 	@for $i from 1 through $row-count {
 
 		[am-Col~='l#{$i}'] {
-			flex: 0 (100%/$row-count)*$i;
+			flex-grow: 0;
+			flex-basis: (100%/$row-count)*$i;
 		}
 
 	}
