--- a/app/scss/modules/_SiteFooter.scss
+++ b/app/scss/modules/_SiteFooter.scss
@@ -28,6 +28,17 @@
 //	opacity: 0.1;
 }
 
+[am-SiteFooter-Bottom] {
+	position: absolute;
+	z-index: 1;
+	bottom: 1rem;
+	left: 1rem;
+	background: white;
+	padding: 0.5rem;
+	display: inline-block;
+	font-size: 0.8rem;
+}
+
 [am-SiteFooter-Inner] {
 
 	
