--- a/app/scss/modules/_ArticleMedia.scss
+++ b/app/scss/modules/_ArticleMedia.scss
@@ -1,10 +1,27 @@
 [am-ArticleMedia] {
 
 	max-width: $media-width;
-	margin: $media-padding 0;
-	background: white;
-	padding: 2rem;
-	margin: 0 -2rem;
+	margin: 0 0 $media-padding 0;
+	padding: 2rem 0;
+	margin-bottom: 2rem;
+	position: relative;
+
+	* {
+		position: relative;
+		z-index: 1;
+	}
+
+	&:after {
+		display: block;
+		content: "";
+		position: absolute;
+		left: -9999px;
+		top: 0;
+		right: -9999px;
+		bottom: 0;
+		background: rgba(white, 0.2);
+		z-index: 0;
+	}
 
 }
 
