--- a/app/scss/modules/_Strip.scss
+++ b/app/scss/modules/_Strip.scss
@@ -125,7 +125,32 @@ a[am-Strip~='alt'] {
 	@media #{$medium-up} {
 		margin: -5rem 0;	
 	}
+	position: relative;
+	z-index: 1;
 	
+}
+
+[am-Strip-Decal] {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	z-index: 0;
+	animation: spin 150s linear infinite;
+
+	// @media #{$medium-up} {
+	// 	margin: -5rem 0;
+	// }
+	img {
+		width: 20rem;
+		height: 20rem;
+		position: absolute;
+		left: 50%;
+		top: 50%;
+		margin-left: -10rem;
+		margin-top: -10rem;
+	}
 }
 
 [am-Strip-Edges] {
