--- a/app/css/app.css
+++ b/app/css/app.css
@@ -547,92 +547,200 @@ code {
   width: 100%; }
 
 [am-Col~='1'] {
-  max-width: 8.33333%; }
+  max-width: 8.33333%;
+  -webkit-flex-basis: 8.33333%;
+  -ms-flex-preferred-size: 8.33333%;
+  flex-basis: 8.33333%; }
 
 [am-Col~='2'] {
-  max-width: 16.66667%; }
+  max-width: 16.66667%;
+  -webkit-flex-basis: 16.66667%;
+  -ms-flex-preferred-size: 16.66667%;
+  flex-basis: 16.66667%; }
 
 [am-Col~='3'] {
-  max-width: 25%; }
+  max-width: 25%;
+  -webkit-flex-basis: 25%;
+  -ms-flex-preferred-size: 25%;
+  flex-basis: 25%; }
 
 [am-Col~='4'] {
-  max-width: 33.33333%; }
+  max-width: 33.33333%;
+  -webkit-flex-basis: 33.33333%;
+  -ms-flex-preferred-size: 33.33333%;
+  flex-basis: 33.33333%; }
 
 [am-Col~='5'] {
-  max-width: 41.66667%; }
+  max-width: 41.66667%;
+  -webkit-flex-basis: 41.66667%;
+  -ms-flex-preferred-size: 41.66667%;
+  flex-basis: 41.66667%; }
 
 [am-Col~='6'] {
-  max-width: 50%; }
+  max-width: 50%;
+  -webkit-flex-basis: 50%;
+  -ms-flex-preferred-size: 50%;
+  flex-basis: 50%; }
 
 [am-Col~='7'] {
-  max-width: 58.33333%; }
+  max-width: 58.33333%;
+  -webkit-flex-basis: 58.33333%;
+  -ms-flex-preferred-size: 58.33333%;
+  flex-basis: 58.33333%; }
 
 [am-Col~='8'] {
-  max-width: 66.66667%; }
+  max-width: 66.66667%;
+  -webkit-flex-basis: 66.66667%;
+  -ms-flex-preferred-size: 66.66667%;
+  flex-basis: 66.66667%; }
 
 [am-Col~='9'] {
-  max-width: 75%; }
+  max-width: 75%;
+  -webkit-flex-basis: 75%;
+  -ms-flex-preferred-size: 75%;
+  flex-basis: 75%; }
 
 [am-Col~='10'] {
-  max-width: 83.33333%; }
+  max-width: 83.33333%;
+  -webkit-flex-basis: 83.33333%;
+  -ms-flex-preferred-size: 83.33333%;
+  flex-basis: 83.33333%; }
 
 [am-Col~='11'] {
-  max-width: 91.66667%; }
+  max-width: 91.66667%;
+  -webkit-flex-basis: 91.66667%;
+  -ms-flex-preferred-size: 91.66667%;
+  flex-basis: 91.66667%; }
 
 [am-Col~='12'] {
-  max-width: 100%; }
+  max-width: 100%;
+  -webkit-flex-basis: 100%;
+  -ms-flex-preferred-size: 100%;
+  flex-basis: 100%; }
 
 @media only screen and (min-width: 40.063em) {
   [am-Col~='m1'] {
-    max-width: 8.33333%; }
+    max-width: 8.33333%;
+    -webkit-flex-basis: 8.33333%;
+    -ms-flex-preferred-size: 8.33333%;
+    flex-basis: 8.33333%; }
   [am-Col~='m2'] {
-    max-width: 16.66667%; }
+    max-width: 16.66667%;
+    -webkit-flex-basis: 16.66667%;
+    -ms-flex-preferred-size: 16.66667%;
+    flex-basis: 16.66667%; }
   [am-Col~='m3'] {
-    max-width: 25%; }
+    max-width: 25%;
+    -webkit-flex-basis: 25%;
+    -ms-flex-preferred-size: 25%;
+    flex-basis: 25%; }
   [am-Col~='m4'] {
-    max-width: 33.33333%; }
+    max-width: 33.33333%;
+    -webkit-flex-basis: 33.33333%;
+    -ms-flex-preferred-size: 33.33333%;
+    flex-basis: 33.33333%; }
   [am-Col~='m5'] {
-    max-width: 41.66667%; }
+    max-width: 41.66667%;
+    -webkit-flex-basis: 41.66667%;
+    -ms-flex-preferred-size: 41.66667%;
+    flex-basis: 41.66667%; }
   [am-Col~='m6'] {
-    max-width: 50%; }
+    max-width: 50%;
+    -webkit-flex-basis: 50%;
+    -ms-flex-preferred-size: 50%;
+    flex-basis: 50%; }
   [am-Col~='m7'] {
-    max-width: 58.33333%; }
+    max-width: 58.33333%;
+    -webkit-flex-basis: 58.33333%;
+    -ms-flex-preferred-size: 58.33333%;
+    flex-basis: 58.33333%; }
   [am-Col~='m8'] {
-    max-width: 66.66667%; }
+    max-width: 66.66667%;
+    -webkit-flex-basis: 66.66667%;
+    -ms-flex-preferred-size: 66.66667%;
+    flex-basis: 66.66667%; }
   [am-Col~='m9'] {
-    max-width: 75%; }
+    max-width: 75%;
+    -webkit-flex-basis: 75%;
+    -ms-flex-preferred-size: 75%;
+    flex-basis: 75%; }
   [am-Col~='m10'] {
-    max-width: 83.33333%; }
+    max-width: 83.33333%;
+    -webkit-flex-basis: 83.33333%;
+    -ms-flex-preferred-size: 83.33333%;
+    flex-basis: 83.33333%; }
   [am-Col~='m11'] {
-    max-width: 91.66667%; }
+    max-width: 91.66667%;
+    -webkit-flex-basis: 91.66667%;
+    -ms-flex-preferred-size: 91.66667%;
+    flex-basis: 91.66667%; }
   [am-Col~='m12'] {
-    max-width: 100%; } }
+    max-width: 100%;
+    -webkit-flex-basis: 100%;
+    -ms-flex-preferred-size: 100%;
+    flex-basis: 100%; } }
 
 @media only screen and (min-width: 64.063em) {
   [am-Col~='l1'] {
-    max-width: 8.33333%; }
+    max-width: 8.33333%;
+    -webkit-flex-basis: 8.33333%;
+    -ms-flex-preferred-size: 8.33333%;
+    flex-basis: 8.33333%; }
   [am-Col~='l2'] {
-    max-width: 16.66667%; }
+    max-width: 16.66667%;
+    -webkit-flex-basis: 16.66667%;
+    -ms-flex-preferred-size: 16.66667%;
+    flex-basis: 16.66667%; }
   [am-Col~='l3'] {
-    max-width: 25%; }
+    max-width: 25%;
+    -webkit-flex-basis: 25%;
+    -ms-flex-preferred-size: 25%;
+    flex-basis: 25%; }
   [am-Col~='l4'] {
-    max-width: 33.33333%; }
+    max-width: 33.33333%;
+    -webkit-flex-basis: 33.33333%;
+    -ms-flex-preferred-size: 33.33333%;
+    flex-basis: 33.33333%; }
   [am-Col~='l5'] {
-    max-width: 41.66667%; }
+    max-width: 41.66667%;
+    -webkit-flex-basis: 41.66667%;
+    -ms-flex-preferred-size: 41.66667%;
+    flex-basis: 41.66667%; }
   [am-Col~='l6'] {
-    max-width: 50%; }
+    max-width: 50%;
+    -webkit-flex-basis: 50%;
+    -ms-flex-preferred-size: 50%;
+    flex-basis: 50%; }
   [am-Col~='l7'] {
-    max-width: 58.33333%; }
+    max-width: 58.33333%;
+    -webkit-flex-basis: 58.33333%;
+    -ms-flex-preferred-size: 58.33333%;
+    flex-basis: 58.33333%; }
   [am-Col~='l8'] {
-    max-width: 66.66667%; }
+    max-width: 66.66667%;
+    -webkit-flex-basis: 66.66667%;
+    -ms-flex-preferred-size: 66.66667%;
+    flex-basis: 66.66667%; }
   [am-Col~='l9'] {
-    max-width: 75%; }
+    max-width: 75%;
+    -webkit-flex-basis: 75%;
+    -ms-flex-preferred-size: 75%;
+    flex-basis: 75%; }
   [am-Col~='l10'] {
-    max-width: 83.33333%; }
+    max-width: 83.33333%;
+    -webkit-flex-basis: 83.33333%;
+    -ms-flex-preferred-size: 83.33333%;
+    flex-basis: 83.33333%; }
   [am-Col~='l11'] {
-    max-width: 91.66667%; }
+    max-width: 91.66667%;
+    -webkit-flex-basis: 91.66667%;
+    -ms-flex-preferred-size: 91.66667%;
+    flex-basis: 91.66667%; }
   [am-Col~='l12'] {
-    max-width: 100%; } }
+    max-width: 100%;
+    -webkit-flex-basis: 100%;
+    -ms-flex-preferred-size: 100%;
+    flex-basis: 100%; } }
 
 [am-Col~='bottom'] {
   -webkit-align-self: flex-end;
@@ -1104,7 +1212,6 @@ a[am-Strip~='alt']:hover {
 
 [am-SiteFooter-Inner] {
   background: white;
-  margin: 0 auto;
   padding: 1rem;
   margin-bottom: 1rem; }
   @media only screen and (min-width: 40.063em) {
