--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,6 @@
-* {
-  box-sizing: border-box;
-}
-
-html,
-body,
-#root {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
-
 .background {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   position: fixed;
   top: 0;
   left: 0;
@@ -29,18 +16,6 @@ body {
   flex-direction: column;
 }
 
-.page {
-  height: 100vh;
-  display: flex;
-  align-items: center;
-}
-
 .page.right {
   justify-content: flex-end;
-}
-
-.block {
-  width: 50%;
-  padding: 2rem;
-  background: #eeeeee;
 }
