--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,27 @@ h5,
 h6 {
   font-family: "rooney-sans", sans-serif;
   margin-top: 0;
+  margin-bottom: 1rem;
+}
+
+a {
+  color: white;
+}
+
+p {
+  margin-top: 0;
+}
+
+p:last-child {
+  margin-bottom: 0;
+}
+
+ul {
+  margin-top: 0;
+}
+
+ul:last-child {
+  margin-bottom: 0;
 }
 
 video {
